Crud Defeitos, Equipamentos, Registros

--- a/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Views/Defeitos/Index.cshtml
+++ b/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Views/Defeitos/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Senai.LanHouse.Web.Razor.Domains.Usuario>
+﻿@model IEnumerable<Senai.LanHouse.Web.Razor.Domains.Defeito>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,10 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Senha)
+                @Html.DisplayNameFor(model => model.Nome)
             </th>
             <th></th>
         </tr>
@@ -25,10 +22,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Senha)
+                @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
