--- a/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Views/Equipamentos/Delete.cshtml
+++ b/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Views/Equipamentos/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Senai.LanHouse.Web.Razor.Domains.Usuario
+﻿@model Senai.LanHouse.Web.Razor.Domains.TipoEquipamento
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,20 +8,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Usuario</h4>
+    <h4>TipoEquipamento</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.Email)
+            @Html.DisplayNameFor(model => model.Nome)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Senha)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Senha)
+            @Html.DisplayFor(model => model.Nome)
         </dd>
     </dl>
     
