--- a/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Views/Login/Create.cshtml
+++ b/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Views/Login/Create.cshtml
@@ -4,14 +4,21 @@
     ViewData["Title"] = "Create";
 }
 
-<h2>Create</h2>
+<h2>Login</h2>
 
-<h4>Usuario</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            @if(ViewBag.Mensagem != null)
+            {
+                <div class="alert alert-danger" role="alert">
+                    @Html.Raw(ViewBag.Mensagem)
+                </div>
+            }
+
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
                 <input asp-for="Email" class="form-control" />
@@ -23,14 +30,10 @@
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Login" class="btn btn-default" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
