--- a/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Views/Shared/_Layout.cshtml
+++ b/Codigo/Senai.LanHouse.Web.Razor/Senai.LanHouse.Web.Razor/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -17,7 +19,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: RGB(0,133,199);">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -26,15 +28,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Senai.LanHouse.Web.Razor</a>
+                <img src="~/images/rocketz_logo.png" style="  height: 50px;"/>
             </div>
+            @if(Context.Session.GetString("email") != null)
+            {
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="RegistroDefeitos" asp-action="Index" style="color: white">Registro</a></li>
+                    <li><a asp-area="" asp-controller="Defeitos" asp-action="index" style="color: white">Defeitos</a></li>
+                    <li><a asp-area="" asp-controller="Equipamentos" asp-action="index" style="color: white">Equipamentos</a></li>
                 </ul>
             </div>
+            }
         </div>
     </nav>
 
